--- a/src/main/java/ulb/mis/view/AddPersonPanel.form
+++ b/src/main/java/ulb/mis/view/AddPersonPanel.form
@@ -18,21 +18,21 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="dateofbirthTextField" pref="109" max="32767" attributes="0"/>
+                      <Component id="familynameTextField" min="-2" pref="110" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="firstnameTextField" pref="110" max="32767" attributes="0"/>
-                          <Component id="familynameTextField" max="32767" attributes="0"/>
+                          <Component id="firstnameTextField" pref="113" max="32767" attributes="0"/>
+                          <Component id="dateofbirthTextField" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
