--- a/src/main/java/ulb/mis/view/CreateDoctorAccount.form
+++ b/src/main/java/ulb/mis/view/CreateDoctorAccount.form
@@ -36,7 +36,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-                      <Component id="phonenumberTextField" min="-2" pref="199" max="-2" attributes="0"/>
+                      <Component id="inamiTextField" min="-2" pref="199" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
@@ -56,7 +56,7 @@
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="phonenumberTextField" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="inamiTextField" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -71,10 +71,10 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Password"/>
+        <Property name="text" type="java.lang.String" value="Inami"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="phonenumberTextField">
+    <Component class="javax.swing.JTextField" name="inamiTextField">
     </Component>
     <Component class="javax.swing.JButton" name="saveButton">
       <Properties>
@@ -112,7 +112,7 @@
           <Color blue="66" green="66" red="66" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Create Patient Account"/>
+        <Property name="text" type="java.lang.String" value="Create Doctor Account"/>
       </Properties>
     </Component>
   </SubComponents>
