--- a/src/main/java/ulb/mis/view/CreateDoctorAccount.form
+++ b/src/main/java/ulb/mis/view/CreateDoctorAccount.form
@@ -71,7 +71,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Inami"/>
+        <Property name="text" type="java.lang.String" value="INAMI"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="inamiTextField">
